se agregan enlaces a código y vista proyectos, se agregan target en navbar

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#sobremi">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#trabajos">Trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -64,7 +64,7 @@
     </header>
 
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <section id="sobremi" class="container text-center my-5" name="sobremi">
 
 
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
@@ -104,7 +104,7 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="trabajos" class="my-5 p-5 bg-info" name="trabajos">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
@@ -117,9 +117,8 @@
                         <p class="card-text">
                             Landing Page realizado para reconocida juguetería vintage.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+                        <a href="https://nhafeveliz.github.io/landing-page/" type="button" class="btn btn-outline-info">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/landing-page" type="button" class="btn btn-outline-info">Ver Código</a>
                     </div>
                 </div>
             </div>
@@ -131,9 +130,10 @@
                         <p class="card-text">
                             Te consideras un amante de las Iguanas? pues este sitio es para ti.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+                        <a href="https://nhafeveliz.github.io/iguana-page/" type="button" class="btn btn-outline-info">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/iguana-page" type="button" class="btn btn-outline-info">Ver Código</a>
+
+                        
                     </div>
                 </div>
             </div>
@@ -145,9 +145,8 @@
                         <p class="card-text">
                             Porque los cupones siempre han sido un gran apollo para la familia de clase media, este sitio es para ti.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+                        <a href="https://nhafeveliz.github.io/cuppon-page/" type="button" class="btn btn-outline-info">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/cuppon-page" type="button" class="btn btn-outline-info">Ver Código</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +156,7 @@
 
 
 
-    <section id="Contacto" class="container my-5">
+    <section id="contacto" class="container my-5" name="contacto"> 
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
