cambio de nombre a hoja de estilo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -106,7 +106,7 @@
 
     <section id="trabajos" class="my-5 p-5 bg-info" name="trabajos">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mi portafolio</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -184,9 +184,6 @@
             <div class="my-3 text-end">
                 <button class="btn btn-info text-light">Enviar</button>
             </div>
-
-
-
         </form>
 
     </section>
