--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     Desarrollo web <br> aplicaciones moviles <br> 
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <a href="#trabajos" type="button" class="btn btn-lg btn-outline-info text-light me-4">Trabajos</a>
+                    <a href="#contacto" type="button" class="btn btn-lg btn-info text-light">Contacto</a>
                 </div>
             </div>
         </div>
