--- a/index.html
+++ b/index.html
@@ -156,35 +156,28 @@
 
 
 
-    <section id="contacto" class="container my-5" name="contacto"> 
-
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-        <p class="text-center my-4 d-none d-md-block">Estas en busqueda de un profesional que haga realidad tus proyectos, no dudes en contactarme.</p>
-
-        <form>
-
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
-                <input class="form-control" placeholder="Nombre">
+    <section id="contacto" class="container mt-2 my-2" name="contacto"> 
+        <div class="row">
+            <div class="col-12 text-center text-light  p-2 rounded" id="contact">
+                <div class="row text-center">
+                    <div class="col">
+                        <a href="https://www.linkedin.com/in/fernavelizalcaino/" target="_blank">
+                            <i class="fa-brands fa-linkedin-in fa-3x icon" id="linkedin"></i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://github.com/nhafeveliz" target="_blank">
+                            <i class="fa-brands fa-github fa-3x icon" id="github"></i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://api.whatsapp.com/send?phone=56988828524&text=Hola,%20gracias%20por%20contactarme,%20apenas%20este%20disponible%20responder%C3%A9%20tu%20mensaje,%20si%20es%20urgente%20por%20favor%20no%20dudes%20en%20llamarme." target="_blank">
+                            <i class="fa-brands fa-whatsapp fa-3x icon" id="whatsapp"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
-            </div>
-
-
-            <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Cuéntame en breve de que trata el proyecto por el que deseas contactarme..."></textarea>
-            </div>
-
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
-            </div>
-        </form>
+        </div>
 
     </section>
 
