cambio de color en botones

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     Desarrollo web <br> aplicaciones moviles <br> 
                 </p>
                 <div class="mb-5 pb-5">
-                    <a href="#trabajos" type="button" class="btn btn-lg btn-outline-info text-light me-4">Trabajos</a>
-                    <a href="#contacto" type="button" class="btn btn-lg btn-info text-light">Contacto</a>
+                    <a href="#trabajos" type="button" class="btn btn-lg btn-outline-dark text-light me-4">Trabajos</a>
+                    <a href="#contacto" type="button" class="btn btn-lg btn-dark text-light">Contacto</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Profesional responsable, proactivo, con capacidad de asumir nuevos desafíos, alto compromiso en el logro de 
+            Analista Programador egresado y titulado en INACAP, proactivo, con capacidad de asumir nuevos desafíos, alto compromiso en el logro de 
             objetivos y resolución de problemas. Adaptable a diferentes entornos laborales. Habilidades de trabajo en equipo.
         </p>
 
@@ -104,7 +104,7 @@
     </section>
 
 
-    <section id="trabajos" class="my-5 p-5 bg-info" name="trabajos">
+    <section id="trabajos" class="my-5 p-5 bg-dark" name="trabajos">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mi portafolio</h2>
 
@@ -117,8 +117,8 @@
                         <p class="card-text">
                             Landing Page realizado para reconocida juguetería vintage.
                         </p>
-                        <a href="https://nhafeveliz.github.io/landing-page/" type="button" class="btn btn-outline-info">Ver Página</a>
-                        <a href="https://github.com/nhafeveliz/landing-page" type="button" class="btn btn-outline-info">Ver Código</a>
+                        <a href="https://nhafeveliz.github.io/landing-page/" type="button" class="btn btn-outline-dark">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/landing-page" type="button" class="btn btn-outline-dark">Ver Código</a>
                     </div>
                 </div>
             </div>
@@ -130,8 +130,8 @@
                         <p class="card-text">
                             Te consideras un amante de las Iguanas? pues este sitio es para ti.
                         </p>
-                        <a href="https://nhafeveliz.github.io/iguana-page/" type="button" class="btn btn-outline-info">Ver Página</a>
-                        <a href="https://github.com/nhafeveliz/iguana-page" type="button" class="btn btn-outline-info">Ver Código</a>
+                        <a href="https://nhafeveliz.github.io/iguana-page/" type="button" class="btn btn-outline-dark">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/iguana-page" type="button" class="btn btn-outline-dark">Ver Código</a>
 
                         
                     </div>
@@ -145,8 +145,8 @@
                         <p class="card-text">
                             Porque los cupones siempre han sido un gran apollo para la familia de clase media, este sitio es para ti.
                         </p>
-                        <a href="https://nhafeveliz.github.io/cuppon-page/" type="button" class="btn btn-outline-info">Ver Página</a>
-                        <a href="https://github.com/nhafeveliz/cuppon-page" type="button" class="btn btn-outline-info">Ver Código</a>
+                        <a href="https://nhafeveliz.github.io/cuppon-page/" type="button" class="btn btn-outline-dark">Ver Página</a>
+                        <a href="https://github.com/nhafeveliz/cuppon-page" type="button" class="btn btn-outline-dark">Ver Código</a>
                     </div>
                 </div>
             </div>
