--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Analista Programador egresado y titulado en INACAP, proactivo, con capacidad de asumir nuevos desafíos, alto compromiso en el logro de 
+            Analista Programador egresado y titulado en <strong>INACAP</strong>, proactivo, con capacidad de asumir nuevos desafíos, alto compromiso en el logro de 
             objetivos y resolución de problemas. Adaptable a diferentes entornos laborales. Habilidades de trabajo en equipo.
         </p>
 
